# valence

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  flake.nix  rustfmt.toml  shell.nix  typos.toml
crates/java_string/: Cargo.toml  README.md
crates/java_string/src/: cesu8.rs  char.rs  iter.rs  lib.rs  owned.rs  pattern.rs  serde.rs  slice.rs  validations.rs
crates/packet_inspector/: Cargo.toml  README.md
crates/packet_inspector/src/: config.rs  context.rs  hex_viewer.rs  main.rs  packet_widget.rs  state.rs
crates/packet_inspector_gui/: Cargo.toml
crates/packet_inspector_gui/src/: context.rs  main.rs  packet_widget.rs  state.rs  syntax_highlighting.rs
crates/playground/: Cargo.toml  build.rs
crates/playground/src/: .gitignore  extras.rs  main.rs  playground.template.rs
crates/valence/: Cargo.toml  README.md
crates/valence/benches/: anvil.rs  block.rs  decode_array.rs  idle.rs  main.rs  packet.rs  var_int.rs  var_long.rs
crates/valence/examples/: advancement.rs  anvil_loading.rs  bench_players.rs  biomes.rs  block_entities.rs  boss_bar.rs  building.rs  chat.rs  chest.rs  combat.rs  conway.rs  cow_sphere.rs  death.rs  entity_hitbox.rs  entity_raycast.rs  fixed_tick.rs  gamemode_switcher.rs  inventory_piano.rs  parkour.rs  particles.rs  player_list.rs  random_equipment.rs  resource_pack.rs  schem_loading.rs  schem_saving.rs  server_list_ping.rs  terrain.rs  text.rs  time_travel.rs  weather.rs  world_border.rs
crates/valence/src/: actor.rs  biome.rs  chat_type.rs  client.rs  component.rs  config.rs  dimension.rs  entity.rs  equipment.rs  event_loop.rs  instance.rs  inventory.rs  lib.rs  math.rs  packet.rs  player_list.rs  registry_codec.rs  secure_chat.rs  server.rs  slab.rs  tests.rs  util.rs  view.rs  weather.rs
crates/valence_advancement/: Cargo.toml  README.md
crates/valence_advancement/src/: event.rs  lib.rs  packet.rs
crates/valence_anvil/: Cargo.toml  README.md
crates/valence_anvil/benches/: world_parsing.rs
crates/valence_anvil/examples/: anvil_loading.rs  valence_loading.rs
crates/valence_anvil/src/: bevy.rs  lib.rs  parse_chunk.rs  parsing.rs  plugin.rs  to_valence.rs  write_chunk.rs
crates/valence_biome/: Cargo.toml  README.md
crates/valence_biome/src/: lib.rs
crates/valence_block/: Cargo.toml  README.md  build.rs
crates/valence_block/src/: lib.rs
crates/valence_boss_bar/: Cargo.toml  README.md
crates/valence_boss_bar/src/: components.rs  lib.rs  packet.rs
crates/valence_build_utils/: Cargo.toml  README.md
crates/valence_build_utils/src/: lib.rs
crates/valence_chat/: Cargo.toml  README.md  yggdrasil_session_pubkey.der
crates/valence_chat/src/: chat_type.rs  command.rs  lib.rs  message.rs
crates/valence_client/: Cargo.toml  README.md
crates/valence_client/src/: abilities.rs  action.rs  chat.rs  command.rs  custom_payload.rs  event_loop.rs  hand_swing.rs  interact_block.rs  interact_entity.rs  interact_item.rs  keepalive.rs  layer.rs  lib.rs  message.rs  misc.rs  movement.rs  op_level.rs  packet.rs  resource_pack.rs  settings.rs  spawn.rs  status.rs  teleport.rs  time.rs  title.rs  weather.rs  world_border.rs
crates/valence_command/: Cargo.toml  README.md
crates/valence_command/src/: arg_parser.rs  argument.rs  array.rs  block.rs  boolean.rs  builder.rs  cenum.rs  command.rs  command_graph.rs  command_scopes.rs  compile.rs  entity.rs  exec.rs  graph.rs  group.rs  handler.rs  item.rs  json.rs  lib.rs  manager.rs  modifier_value.rs  node.rs  nodes.rs  num.rs  nums.rs  packet.rs  parse.rs  parse_util.rs  parser.rs  parsers.rs  pkt.rs  pos.rs  position.rs  primitive.rs  range.rs  reader.rs  resource.rs  scopes.rs  string.rs  suggestions.rs  (+1 more)
crates/valence_command_derive/: Cargo.toml  README.md
crates/valence_command_derive/src/: lib.rs
crates/valence_core/: Cargo.toml  README.md
crates/valence_core/src/: aabb.rs  block_pos.rs  boss_bar.rs  chunk_pos.rs  despawn.rs  difficulty.rs  direction.rs  enchant.rs  game_mode.rs  hand.rs  ident.rs  item.rs  layer.rs  lib.rs  packet.rs  particle.rs  player_textures.rs  property.rs  protocol.rs  scratch.rs  sound.rs  text.rs  util.rs  uuid.rs
crates/valence_entity/: Cargo.toml  README.md  build.rs
crates/valence_entity/extracted/: effects.json  entities.json  misc.json
crates/valence_entity/src/: active_status_effects.rs  attributes.rs  flags.rs  hitbox.rs  layer.rs  lib.rs  manager.rs  packet.rs  query.rs  tracked_data.rs
crates/valence_entity_hitbox/: Cargo.toml  README.md
crates/valence_entity_hitbox/src/: lib.rs
crates/valence_equipment/: Cargo.toml  README.md
crates/valence_equipment/src/: interaction_broadcast.rs  inventory_sync.rs  lib.rs
crates/valence_event/: Cargo.toml  README.md
crates/valence_event/src/: events.rs  lib.rs  (+1 more)
crates/valence_generated/: Cargo.toml  README.md
crates/valence_ident_macros/: Cargo.toml  README.md
crates/valence_layer/: Cargo.toml  README.md
crates/valence_nbt/: Cargo.toml  README.md
packet_inspector/: Cargo.toml  README.md
packet_inspector/src/: README.md  main.rs
serde_nbt/: Cargo.toml  README.md
serde_nbt/src/: array.rs  error.rs  lib.rs  tests.rs  value.rs
valence_anvil/: Cargo.toml
valence_anvil/benches/: benchtools.rs  world_parsing.rs
valence_anvil/examples/: java_region.rs  valence_loading.rs
valence_anvil/src/: biome.rs  chunk.rs  compression.rs  error.rs  lib.rs  palette.rs  region.rs  to_valence.rs
valence_anvil/tests/: assets.rs  parse_world.rs
valence_nbt/: Cargo.toml  README.md
valence_nbt/src/: array.rs  compound.rs  error.rs  from_binary_slice.rs  lib.rs  modified_utf8.rs  tag.rs  tests.rs  to_binary_writer.rs  value.rs
valence_protocol/: Cargo.toml
valence_protocol/benches/: benches.rs  conversions.rs
valence_protocol/src/: array.rs  block.rs  block_pos.rs  bounded.rs  byte_angle.rs  byte_counter.rs  cache.rs  client.rs  codec.rs  encoded_buf.rs  entity_meta.rs  ident.rs  impls.rs  inventory.rs  item.rs  iter_list.rs  lib.rs  packets.rs  player_list.rs  raw_bytes.rs  text.rs  translation_key.rs  types.rs  username.rs  var_int.rs  var_long.rs
(+1975 files in other folders)
