[package]
name = "valence"
version.workspace = true
edition.workspace = true
description = "A framework for building Minecraft servers in Rust."
documentation.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords = ["minecraft", "gamedev", "server", "ecs"]
categories = ["game-engines"]

[features]
default = [
    "advancement",
    "anvil",
    "boss_bar",
    "inventory",
    "log",
    "network",
    "player_list",
    "scoreboard",
    "world_border",
    "weather",
    "testing",
]
advancement = ["dep:valence_advancement"]
anvil = ["dep:valence_anvil"]
boss_bar = ["dep:valence_boss_bar"]
inventory = ["dep:valence_inventory"]
log = ["dep:bevy_log"]
network = ["dep:valence_network"]
player_list = ["dep:valence_player_list"]
scoreboard = ["dep:valence_scoreboard"]
world_border = ["dep:valence_world_border"]
weather = ["dep:valence_weather"]
testing = []

[dependencies]
anyhow.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_log = { workspace = true, optional = true }
uuid.workspace = true
bytes.workspace = true
rand.workspace = true
valence_advancement = { workspace = true, optional = true }
valence_anvil = { workspace = true, optional = true }
valence_boss_bar = { workspace = true, optional = true }
valence_server.workspace = true
valence_event.workspace = true
valence_inventory = { workspace = true, optional = true }
valence_network = { workspace = true, optional = true }
valence_player_list = { workspace = true, optional = true }
valence_registry.workspace = true
valence_scoreboard = { workspace = true, optional = true }
valence_weather = { workspace = true, optional = true }
valence_world_border = { workspace = true, optional = true }
valence_lang.workspace = true
valence_text.workspace = true
valence_ident.workspace = true

[dev-dependencies]
anyhow.workspace = true
clap.workspace = true
criterion.workspace = true
flume.workspace = true
noise.workspace = true     # For the terrain example.
tracing.workspace = true

[dev-dependencies.reqwest]
workspace = true
default-features = false
features = ["rustls-tls", "blocking", "stream"]

[[bench]]
name = "main"
harness = false

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[workspace]
members = ["crates/*", "tools/*"]
exclude = []
resolver = "2"

[workspace.package]
version = "0.2.0-dev+mc.1.20.1"
edition = "2021"
repository = "https://github.com/valence-rs/valence"
documentation = "https://docs.rs/valence/"
license = "MIT"

[workspace.dependencies]
aes = "0.8.2"
anyhow = { version = "1.0.70", features = ["backtrace"] }
approx = "0.5.1"
arrayvec = "0.7.2"
async-trait = "0.1.60"
atty = "0.2.14"
base64 = "0.21.0"
bevy_app = { version = "0.11", default-features = false }
bevy_ecs = { version = "0.11", default-features = false, features = ["multi-threaded"] }
bevy_hierarchy = { version = "0.11", default-features = false }
bevy_log = { version = "0.11" }
bevy_mod_debugdump = { version = "0.8.0", default-features = false }
bevy_utils = { version = "0.11" }
bitfield-struct = "0.3.1"
byteorder = "1.4.3"
bytes = "1.2.1"
cesu8 = "1.1.0"
cfb8 = "0.8.1"
clap = { version = "4.0.30", features = ["derive"] }
criterion = "0.4.0"
directories = "5.0.0"
eframe = { version = "0.22.0", default-features = false }
egui = "0.22.0"
egui_dock = "0.6"
enum-map = "2.5.0"
flate2 = "1.0.24"
flume = "0.10.14"
fs_extra = "1.2.0"
glam = "0.23.0"
heck = "0.4.0"
hmac = "0.12.1"
indexmap = "1.9.3"
image = "0.24.6"
itertools = "0.10.5"
lru = "0.10.0"
noise = "0.8.2"
num = "0.4.0"
num-bigint = "0.4.3"
num-integer = "0.1.45"
owo-colors = "3.5.0"
parking_lot = "0.12.1"
paste = "1.0.11"
pretty_assertions = "1.3.0"
proc-macro2 = "1.0.56"
quote = "1.0.26"
rand = "0.8.5"
rayon = "1.7.0"
regex = "1.6.0"
reqwest = { version = "0.11.12", default-features = false }
rfd = "0.11.3"
rsa = "0.7.2"
rsa-der = "0.3.0"
rustc-hash = "1.1.0"
serde = "1.0.160"
serde_json = "1.0.96"
sha1 = "0.10.5"
sha2 = "0.10.6"
syn = "2.0.15"
syntect = { version = "5.0.0", default-features = false }
tempfile = "3.3.0"
thiserror = "1.0.40"
time = "0.3.17"
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = { version = "2.2.2", features = ["serde"] }
uuid = "1.3.1"
valence_advancement.path = "crates/valence_advancement"
valence_anvil.path = "crates/valence_anvil"
valence_build_utils.path = "crates/valence_build_utils"
valence_server.path = "crates/valence_server"
valence_event.path = "crates/valence_event"
valence_packet_macros.path = "crates/valence_packet_macros"
valence_server_core.path = "crates/valence_server_core"
valence_entity.path = "crates/valence_entity"
valence_inventory.path = "crates/valence_inventory"
valence_nbt = { path = "crates/valence_nbt", features = ["uuid"] }
valence_network.path = "crates/valence_network"
valence_player_list.path = "crates/valence_player_list"
valence_registry.path = "crates/valence_registry"
valence_scoreboard.path = "crates/valence_scoreboard"
valence_world_border.path = "crates/valence_world_border"
valence_boss_bar.path = "crates/valence_boss_bar"
valence_weather.path = "crates/valence_weather"
valence_math.path = "crates/valence_math"
valence_ident.path = "crates/valence_ident"
valence_ident_macros.path = "crates/valence_ident_macros"
valence_generated.path = "crates/valence_generated"
valence_text.path = "crates/valence_text"
valence_protocol.path = "crates/valence_protocol"
valence_protocol_macros.path = "crates/valence_protocol_macros"
valence_lang.path = "crates/valence_lang"
valence.path = "."
zip = "0.6.3"
