[package]
name = "packet_inspector"
version = "0.1.0"
edition = "2021"
description = "A simple Minecraft proxy for inspecting packets."

[dependencies]
valence_protocol = { path = "../valence_protocol", version = "0.1.0", features = ["compression"] }
clap = { version = "4.0.30", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
regex = "1.6.0"
