[package]
name = "valence_anvil"
description = "A library for Minecraft's Anvil world format."
documentation = "https://docs.rs/valence_anvil/"
repository = "https://github.com/valence_anvil/valence/tree/main/valence_anvil"
readme = "README.md"
license = "MIT"
keywords = ["anvil", "minecraft", "serialization"]
version = "0.1.0"
authors = ["Ryan Johnson <ryanj00a@gmail.com>", "TerminatorNL <TerminatorNL@users.noreply.github.com>"]
build = "build/main.rs"
edition = "2021"

[dependencies]
valence = { version = "0.1.0", path = ".." }
rayon = "1.5.3"
async-compression = { version = "0.3.15", features = ["tokio", "gzip", "zlib"] }
byteorder = "1.4.3"
tokio = { version = "1.21.2", features = ["fs", "io-util"] }
futures = "0.3.24"
thiserror = "1.0.37"

[dev-dependencies]
reqwest = { version  = "0.11.12", features = ["blocking", "stream"] }
tempfile = "3.3.0"
zip = "0.5"
fs_extra = "1.2.0"
zip-extensions = "0.6.1"

criterion = { version = "0.4.0", features = ["async", "async_tokio"] }

[[bench]]
name = "world_parsing"
harness = false

[build-dependencies]
anyhow = "1.0.65"
heck = "0.4.0"
proc-macro2 = "1.0.43"
quote = "1.0.21"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
rayon = "1.5.3"
num = "0.4.0"
