[package]
name = "valence_anvil"
description = "A library for Minecraft's Anvil world format."
documentation = "https://docs.rs/valence_anvil/"
repository = "https://github.com/valence_anvil/valence/tree/main/valence_anvil"
readme = "README.md"
license = "MIT"
keywords = ["anvil", "minecraft", "deserialization"]
version = "0.1.0"
authors = ["Ryan Johnson <ryanj00a@gmail.com>", "TerminatorNL <TerminatorNL@users.noreply.github.com>"]
edition = "2021"

[dependencies]
byteorder = "1.4.3"
flate2 = "1.0.25"
thiserror = "1.0.37"
num-integer = "0.1.45" # TODO: remove when div_ceil is stabilized.
valence = { version = "0.1.0", path = "..", optional = true }
valence_nbt = { version = "0.5.0", path = "../valence_nbt" }

[dev-dependencies]
anyhow = "1.0.68"
criterion = "0.4.0"
fs_extra = "1.2.0"
tempfile = "3.3.0"
valence = { version = "0.1.0", path = ".." }
valence_anvil = { version = "0.1.0", path = ".", features = ["valence"] }
zip = "0.6.3"

[dev-dependencies.reqwest]
version = "0.11.12"
default-features = false
# Avoid OpenSSL dependency on Linux.
features = ["rustls-tls", "blocking", "stream"]

[[bench]]
name = "world_parsing"
harness = false
