[package]
name = "valence_protocol"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

[dependencies]
anyhow = "1.0.66"
byteorder = "1.4.3"
bytes = "1.2.1"
thiserror = "1.0.37"
arrayvec = "0.7.2"
uuid = "1.2.1"
valence_nbt = { version = "0.4.0", path = "../valence_nbt" }
valence_derive = { version = "0.1.0", path = "../valence_derive" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
aes = "0.7.5"
cfb8 = "0.7.1"
flate2 = "1.0.24"

[dev-dependencies]
rand = "0.8.5"

[build-dependencies]
anyhow = "1.0.65"
heck = "0.4.0"
proc-macro2 = "1.0.43"
quote = "1.0.21"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
