[package]
name = "java_string"
version = "0.1.2"
description = "An implementation of Java strings, tolerant of invalid UTF-16 encoding"
keywords = ["java", "string", "utf16"]
edition.workspace = true
repository.workspace = true
license.workspace = true

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0.200", optional = true }

[lints]
workspace = true

