[package]
name = "packet_inspector"
version = "0.1.0"
edition = "2021"
description = "A simple Minecraft proxy for inspecting packets."

[dependencies]
anyhow = "1"
clap = { version = "4.0.30", features = ["derive"] }
owo-colors = "3.5.0"
regex = "1.6.0"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.16"
valence_protocol = { path = "../valence_protocol", version = "0.1.0", features = ["compression"] }
