[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
glam = "0.22.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
valence_new = { path = "../valence_new" }
