[package]
name = "valence"
version.workspace = true
edition.workspace = true
description = "A framework for building Minecraft servers in Rust."
documentation.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords = ["minecraft", "gamedev", "server", "ecs"]
categories = ["game-engines"]
build = "build/main.rs"

[dependencies]
anyhow.workspace = true
arrayvec.workspace = true
base64.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bitfield-struct.workspace = true
bytes.workspace = true
flume.workspace = true
glam.workspace = true
num-integer.workspace = true
parking_lot.workspace = true
paste.workspace = true
rand.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["serde"] }
valence_nbt = { workspace = true, features = ["uuid"] }
valence_protocol = { workspace = true, features = [
    "encryption",
    "compression",
    "glam",
] }

[dev-dependencies]
approx.workspace = true
glam = { workspace = true, features = ["approx"] }
noise.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
anyhow.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rayon.workspace = true
num.workspace = true
