[package]
name = "valence"
version.workspace = true
edition.workspace = true
description = "A framework for building Minecraft servers in Rust."
documentation.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords = ["minecraft", "gamedev", "server", "ecs"]
categories = ["game-engines"]

[features]
default = ["network", "player_list", "inventory", "anvil", "advancement", "secure_chat"]
network = ["dep:valence_network"]
player_list = ["dep:valence_player_list"]
inventory = ["dep:valence_inventory"]
anvil = ["dep:valence_anvil"]
advancement = ["dep:valence_advancement"]
chat = ["dep:valence_chat", "valence_client/chat"]
secure_chat = ["chat", "valence_chat?/secure", "valence_client/secure_chat"]

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
glam.workspace = true
uuid.workspace = true
valence_nbt.workspace = true
valence_core.workspace = true
valence_registry.workspace = true
valence_block.workspace = true
valence_biome.workspace = true
valence_dimension.workspace = true
valence_entity.workspace = true
valence_instance.workspace = true
valence_client.workspace = true
valence_network = { workspace = true, optional = true }
valence_player_list = { workspace = true, optional = true }
valence_inventory = { workspace = true, optional = true }
valence_anvil = { workspace = true, optional = true }
valence_advancement = { workspace = true, optional = true }
valence_chat = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
bytes.workspace = true
noise.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
tracing.workspace = true
flume.workspace = true
clap.workspace = true
criterion.workspace = true
fs_extra.workspace = true
tempfile.workspace = true
zip.workspace = true

[dev-dependencies.reqwest]
workspace = true
default-features = false
# Avoid OpenSSL dependency on Linux.
features = ["rustls-tls", "blocking", "stream"]

[[bench]]
name = "main"
harness = false
