[package]
name = "valence_advancement"
description = "Advancement support for Valence"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
valence_server.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_hierarchy.workspace = true
rustc-hash.workspace = true
