[package]
name = "valence_anvil"
description = "Anvil file format support for Valence"
readme = "README.md"
keywords = ["anvil", "minecraft", "deserialization"]
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
bevy_app.workspace = true
bevy_ecs.workspace = true
byteorder.workspace = true
flate2.workspace = true
flume.workspace = true
lru.workspace = true
num-integer.workspace = true
thiserror.workspace = true
tracing.workspace = true
valence_server.workspace = true
