[package]
name = "valence_biome"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
serde.workspace = true
tracing.workspace = true
valence_core.workspace = true
valence_nbt = { workspace = true, features = ["serde"] }
valence_registry.workspace = true
